@@ -35,6 +35,7 @@ version <next>:
 - IEC-61937 compatible Muxer
 - TwinVQ decoder
 - Bluray (PGS) subtitle decoder
+- LPCM support in MPEG-TS (HDMV RID as found on Blu-ray disks)
 
 
 
